<resources>
    <string name="app_name">World News</string>
    <string name="logo">Logo Application</string>
    <string name="login" translatable="false">Login</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password" translatable="false">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="txt_or">OR</string>
    <string name="google_login">Login with Google</string>
    <string name="new_account">New to World News?</string>
    <string name="register">Register</string>

    <string name="country">Country of interest</string>
    <string name="topic">Topic of interest</string>

    <string name="france">France</string>
    <string name="italy">Italy</string>
    <string name="germany">Germany</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="united_states">United States</string>

    <string-array name="country_array">
        <item>@string/france</item>
        <item>@string/germany</item>
        <item>@string/italy</item>
        <item>@string/united_kingdom</item>
        <item>@string/united_states</item>
    </string-array>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="next">Next</string>

    <string name="alert_text_country_of_interest">Choose at least one country of interest</string>
    <string name="alert_text_topic_of_interest">Choose at least one topic of interest</string>

    <string name="error_email">Insert a valid email address</string>
    <string name="error_password">Password should be at least 6 characters</string>
    <string name="check_login_data_message">Check the data you inserted</string>
    <string name="error_login_user_message">There is no user record corresponding to this identifier</string>
    <string name="error_login_password_message">The password is invalid</string>
    <string name="error_user_collision_message">The email address is already in use by another account</string>
    <string name="error_no_google_account_found_message">No Google accounts have been found</string>

    <string name="user_data_retrieving_message">Retrieving of user data in progress</string>

    <string name="country_news">World</string>
    <string name="topic_news">Topic</string>
    <string name="favorite_news">Favorites</string>
    <string name="settings">Settings</string>
    <string name="news_details">News</string>
    <string name="delete">Delete</string>
    <string name="news">News</string>
    <string name="personal_area">Personal area</string>

    <string name="nav_drawer_subtitle">Stay tuned for news from the world</string>

    <string name="error_retrieving_news">Error in retrieving the news</string>
    <string name="api_key_error">API Key not valid or maximum number of requests reached</string>
    <string name="unexpected_error">Unexpected error</string>

    <string name="fav_content_description">Add the news to the favorite list</string>
    <string name="fav_delete_content_description">Remove the news from the favorite list</string>

    <string name="news_added_to_favorite_list_message">News added to the favorite list</string>
    <string name="news_removed_from_favorite_list_message">News removed from the favorite list</string>

    <!-- Content Description Strings -->
    <string name="content_description_fav_addition">Add the news to the favorite list</string>
    <string name="content_description_fav_delete">Remove the news from the favorite list</string>
    <string name="content_description_news_cover_image">News cover image</string>
</resources>