<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.preferences.NewsPreferencesActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.Material3.Dark"
        app:popupTheme="@style/ThemeOverlay.Material3.Light"
        app:title="@string/app_name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_appbar"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textview_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/country"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="24sp" />

                    <Spinner
                        android:id="@+id/spinner_countries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="16dp"
                        android:layout_below="@id/textview_country"
                        android:entries="@array/country_array"
                        android:minHeight="48dp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardview_country"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp">

                    <TextView
                        android:id="@+id/textview_topic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/topic"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/checkbox_business"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textview_topic"
                        android:text="@string/business" />

                    <CheckBox
                        android:id="@+id/checkbox_entertainment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/checkbox_business"
                        android:text="@string/entertainment" />

                    <CheckBox
                        android:id="@+id/checkbox_general"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/checkbox_entertainment"
                        android:text="@string/general" />

                    <CheckBox
                        android:id="@+id/checkbox_health"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/checkbox_general"
                        android:text="@string/health" />

                    <CheckBox
                        android:id="@+id/checkbox_science"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/checkbox_health"
                        android:text="@string/science" />

                    <CheckBox
                        android:id="@+id/checkbox_sport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/checkbox_science"
                        android:text="@string/sports" />

                    <CheckBox
                        android:id="@+id/checkbox_technology"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/checkbox_sport"
                        android:text="@string/technology" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_below="@+id/cardview_topic">

                <Button
                    android:id="@+id/button_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/next" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>